# ros_rpc

./: README.rst
baxter_rpc_msgs/: CMakeLists.txt
baxter_rpc_msgs/srv/: SolvePositionIkParts.srv
ros_rpc/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
ros_rpc/script/: rpc_server_script.py  sample_baxter_script.py  sample_script.py
ros_rpc/src/ros_rpc/: rpc_server.py  sample.py  sample_baxter.py
ros_rpc/test/: test_hsr_rpc.py
tork_rpc/: CHANGELOG.rst  CMakeLists.txt  package.xml
tork_rpc_apps/: CMakeLists.txt  README.rst  package.xml  tork_rpc.rosinstall
tork_rpc_util/: .rpc_apps.rosinstall  CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
tork_rpc_util/doc/: index.rst
tork_rpc_util/msg/: StringList.msg
