<?xml version="1.0"?>
<package>
  <name>ros_rpc</name>
  <version>0.0.0</version>
  <description>This package provides abstract RPC (Remote Procedure Call) structure for derived packages for robot operation.</description>

  <author email="dev@opensource-robotics.tokyo.jp">TORK</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>

  <license>Apache License 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/ros_rpc</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <test_depend>rostest</test_depend>
  <export />
</package>