<?xml version="1.0"?>
<package>
  <name>tork_rpc</name>
  <version>0.0.0</version>
  <description>This package suite provides abstract RPC (Remote Procedure Call)
  structure for higher level of robot operations for the ROS-based robots.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="n130s@todo.todo">n130s</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/tork_rpc</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tork_rpc_apps</run_depend>
  <run_depend>tork_rpc_util</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>
